--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,13 +1,14 @@
-# These are supported funding model platforms
-
-github: # Replace with up to 4 GitHub Sponsors-enabled usernames e.g., [user1, user2]
-patreon: # Replace with a single Patreon username
-open_collective: # Replace with a single Open Collective username
-ko_fi: # Replace with a single Ko-fi username
-tidelift: # Replace with a single Tidelift platform-name/package-name e.g., npm/babel
-community_bridge: # Replace with a single Community Bridge project-name e.g., cloud-foundry
-liberapay: # Replace with a single Liberapay username
-issuehunt: # Replace with a single IssueHunt username
-otechie: # Replace with a single Otechie username
-lfx_crowdfunding: # Replace with a single LFX Crowdfunding project-name e.g., cloud-foundry
-custom: # 0xb6135acb77b20293f998ffd8e4c73c7d65426091Replace with up to 4 custom sponsorship URLs e.g., ['link1', 'link2']
+ethereum_payment_info:
+  address: "0xb6135acb77b20293f998ffd8e4c73c7d65426091"
+  currency: "ETH"
+  instructions: |
+    To send Ethereum (ETH) to this address, follow these steps:
+    1. Open your Ethereum wallet.
+    2. Choose the option to send ETH.
+    3. Enter this Ethereum address as the recipient: 0xb6135acb77b20293f998ffd8e4c73c7d65426091
+    4. Enter the amount of ETH you wish to send.
+    5. Review the transaction details and confirm the transaction.
+  note: |
+    Please ensure that you send only ETH to this address.
+    Transactions on the Ethereum blockchain are irreversible.
+    For any queries or issues, contact me at [your contact information].
